--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Merge</title>
+    <title>Gustavo Baez</title>
 </head>
 <body>
-    this is my test for merging
+    this is my test for merging!!
+    hello how are you
+
 </body>
 </html>
